# solswap

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
client/: Cargo.toml
client/idls/: solswap.json
client/src/: main.rs  utils.rs
programs/solswap/: Cargo.toml
programs/solswap/src/: constants.rs  error.rs  lib.rs
programs/solswap/src/instructions/: deposit.rs  init_config.rs  mod.rs  take_offer.rs  utils.rs
programs/solswap/src/state/: config.rs  mod.rs  offer.rs
src/: Cargo.toml
src/idls/: solswap.json
src/src/: main.rs
tests/: Cargo.toml  solswap.ts
tests/src/: lib.rs
tests/src/instructions/: create_offer_ix.rs  mod.rs
