[package]
name = "myproject"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
tokio = "1.47.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
serde_json = "1.0.143"
solana-system-interface  = "2.0.0"
