[workspace]
members = ["src/*"]

[package]
name = "src"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
tokio = "1.47.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0",  features = ["no-entrypoint"] }
