[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-test-validator = "2.2.2"
toml = "0.7"
solana-pubkey = "2.2.2"
solana-signer = "2.2.1"
solana-keypair = "2.2.1"
solana-system-interface = {version = "1.0.0", features = ["bincode"]}
solana-message = "2.2.2"
solana-transaction = "2.2.2"
solana-transaction-status = "2.2.2"
solana-instruction = "2.2.2"
solana-client = "2.2.2"
solana-rpc-client = "2.2.2"
solana-sdk = "2.2.2"
spl-token-2022 = "8.0.0"
spl-associated-token-account = "7.0.0"
sha2 = "0.11.0-rc.2"
tokio = { version = "1.0", features = ["full"] }
